- Fixed overflow issue on popupmenu - HFC-3454

--- a/sass/controls/_popupmenu.scss
+++ b/sass/controls/_popupmenu.scss
@@ -132,7 +132,7 @@
   display: none;
   list-style: none;
   margin: 0;
-  overflow: hidden;
+  overflow: auto;
   -webkit-overflow-scrolling: touch;
   padding: 10px 0;
 
